[gd_scene load_steps=20 format=3 uid="uid://ot7grpne33p"]

[ext_resource type="Script" uid="uid://bge70f7flbw1" path="res://scripts/enemy/girl_enemy.gd" id="1_1o6xl"]
[ext_resource type="Texture2D" uid="uid://hk8hci84w33d" path="res://assets/enemy/BattingGirl_Idle-Sheet.png" id="2_1o6xl"]
[ext_resource type="Texture2D" uid="uid://dcick7msx4fvn" path="res://assets/enemy/BattingGirl_Walk-Sheet.png" id="3_upr5f"]
[ext_resource type="Script" uid="uid://bjqwo0d2g8473" path="res://scripts/enemy/state_machine.gd" id="4_4bqc8"]
[ext_resource type="Texture2D" uid="uid://ccuq8kntcl7f" path="res://assets/enemy/BattingGirl_Hurt-Sheet.png" id="4_ja4ny"]
[ext_resource type="Script" uid="uid://dxonndlpdksit" path="res://scripts/enemy/idle_state.gd" id="5_v2vgt"]
[ext_resource type="Script" uid="uid://cfbhn5081cyf7" path="res://scripts/enemy/walk_state.gd" id="6_040tv"]
[ext_resource type="Script" uid="uid://bxors862xyqs0" path="res://scenes/colliders/enemy_damage_receiver.gd" id="7_0p3jp"]
[ext_resource type="Script" uid="uid://cy2tw2t5rtv3e" path="res://scripts/enemy/hurt_state.gd" id="8_vnfr6"]
[ext_resource type="Script" uid="uid://d3lnwej4foioj" path="res://scripts/enemy/wakeup_state.gd" id="9_5xcxg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_040tv"]
radius = 4.0
height = 26.0

[sub_resource type="Animation" id="Animation_upr5f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1o6xl")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_1o6xl"]
resource_name = "idle"
length = 1.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1o6xl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_4bqc8"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_upr5f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_vnfr6"]
resource_name = "hurt"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ja4ny")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_5xcxg"]
resource_name = "wakeup"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ja4ny")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4bqc8"]
_data = {
&"RESET": SubResource("Animation_upr5f"),
&"hurt": SubResource("Animation_vnfr6"),
&"idle": SubResource("Animation_1o6xl"),
&"wakeup": SubResource("Animation_5xcxg"),
&"walk": SubResource("Animation_4bqc8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_040tv"]
size = Vector2(36, 13)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0p3jp"]
radius = 3.0
height = 26.0

[node name="GirlEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 12
script = ExtResource("1_1o6xl")
damage = 2
max_health = 20
speed = 25

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1o6xl")
centered = false
offset = Vector2(-50, -100)
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_040tv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4bqc8")
}
autoplay = "idle"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "enemy")]
script = ExtResource("4_4bqc8")
current_state = NodePath("Idle")
enemy = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_v2vgt")
enemy = NodePath("../..")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_040tv")
enemy = NodePath("../..")

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_vnfr6")
enemy = NodePath("../..")
knockback_intensity = 70.0

[node name="Wakeup" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_5xcxg")
enemy = NodePath("../..")

[node name="DamageEmitter" type="Area2D" parent="."]
position = Vector2(0, -38)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageEmitter"]
position = Vector2(26, -1)
shape = SubResource("RectangleShape2D_040tv")
debug_color = Color(0.745521, 0.256561, 0.945206, 0.42)

[node name="EnemyDamageReceiver" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
monitoring = false
script = ExtResource("7_0p3jp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDamageReceiver"]
position = Vector2(-10, -38)
shape = SubResource("CapsuleShape2D_0p3jp")

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Hurt" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Wakeup" method="_on_animation_player_animation_finished"]
